--- a/config/config.yaml
+++ b/config/config.yaml
@@ -8,7 +8,9 @@ word_pred: 0.15
 #train
 bucket_file: ['train-clean-100']
 is_train_wav2vec: False
-is_init_pred_weight: True
+is_init_pred_weight: False
+is_replay: True
+replay_prob: 0.1
 epoch: 20
 batch_size: 4
 real_batch_size: 32
@@ -18,4 +20,4 @@ wav2vec_dir: './pretrain_models/wav2vec2-base-960h'
 # For yunnao
 #librispeech_path: '/userhome/dataset/librispeech/LibriSpeech'
 # for PC
-librispeech_path: 'D:\OneDrive\datasets\Librispeech\\test-clean\LibriSpeech'
+librispeech_path: 'F:\OneDrive\datasets\Librispeech\\test-clean\LibriSpeech'
